This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: test_zoneinfo leaked [84, 84, 84] references
Type: Stage: resolved
Components: Versions: Python 3.10, Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: p-ganssle Nosy List: lukasz.langa, miss-islington, p-ganssle, pablogsal, vstinner
Priority: release blocker Keywords: patch

Created on 2020-08-17 14:31 by pablogsal, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 21907 merged p-ganssle, 2020-08-17 18:07
PR 21912 merged miss-islington, 2020-08-17 22:40
Messages (4)
msg375550 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2020-08-17 14:31
OK (skipped=26)
......
test_zoneinfo leaked [84, 84, 84] references, sum=252
test_zoneinfo leaked [41, 41, 41] memory blocks, sum=123
1 test failed again:
    test_zoneinfo
== Tests result: FAILURE then FAILURE ==

Example failure:

https://buildbot.python.org/all/#/builders/84/builds/3
msg375574 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2020-08-17 22:40
New changeset c3dd7e45cc5d36bbe2295c2840faabb5c75d83e4 by Paul Ganssle in branch 'master':
bpo-41568: Fix refleaks in zoneinfo subclasses (GH-21907)
https://github.com/python/cpython/commit/c3dd7e45cc5d36bbe2295c2840faabb5c75d83e4
msg375576 - (view) Author: miss-islington (miss-islington) Date: 2020-08-17 23:24
New changeset e3cafebb5cb2bc4df03afb03fa206a37d076d7ee by Miss Islington (bot) in branch '3.9':
bpo-41568: Fix refleaks in zoneinfo subclasses (GH-21907)
https://github.com/python/cpython/commit/e3cafebb5cb2bc4df03afb03fa206a37d076d7ee
msg375656 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2020-08-19 16:13
https://buildbot.python.org/all/#/builders/84 is back to green, I close the issue.
History
Date User Action Args
2022-04-11 14:59:34adminsetgithub: 85740
2020-08-19 16:13:54vstinnersetstatus: open -> closed

nosy: + vstinner
messages: + msg375656

resolution: fixed
stage: patch review -> resolved
2020-08-17 23:32:47pablogsalsetnosy: + lukasz.langa
2020-08-17 23:24:30miss-islingtonsetmessages: + msg375576
2020-08-17 22:40:25miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request21027
2020-08-17 22:40:16pablogsalsetmessages: + msg375574
2020-08-17 18:07:44p-gansslesetkeywords: + patch
stage: patch review
pull_requests: + pull_request21023
2020-08-17 14:31:50pablogsalsetpriority: normal -> release blocker
assignee: p-ganssle
versions: + Python 3.9, Python 3.10
2020-08-17 14:31:33pablogsalcreate